# dormy-ai

./: .env.example  .gitignore  README.md  pyproject.toml  railway.toml
docs/: byok-e2e-test.md  nanobot-config-example.json  nanobot-integration.md  telegram-bot-deploy.md
dormy/: __init__.py  __main__.py  auth.py  config.py  db.py
dormy-skills/: README.md  SKILL.md
dormy-skills/reference/: gtm-ab-test-setup.md  gtm-ad-creative.md  gtm-ai-seo.md  gtm-analytics-tracking.md  gtm-aso-audit.md  gtm-churn-prevention.md  gtm-cold-email.md  gtm-community-marketing.md  gtm-competitor-alternatives.md  gtm-competitor-profiling.md  gtm-content-strategy.md  gtm-copy-editing.md  gtm-copywriting.md  gtm-customer-research.md  gtm-directory-submissions.md  gtm-email-sequence.md  gtm-form-cro.md  gtm-free-tool-strategy.md  gtm-image.md  gtm-launch-strategy.md  gtm-lead-magnets.md  gtm-marketing-ideas.md  gtm-marketing-psychology.md  gtm-onboarding-cro.md  gtm-page-cro.md  gtm-paid-ads.md  gtm-paywall-upgrade-cro.md  gtm-popup-cro.md  gtm-pricing-strategy.md  gtm-product-marketing-context.md  gtm-programmatic-seo.md  gtm-referral-program.md  gtm-revops.md  gtm-seo-audit.md  (+8 more)
migrations/: 001_init.sql  002_pgvector.sql  003_contacts_source_path.sql  004_contacts_source_path_full_unique.sql  005_user_observations.sql  006_invite_codes.sql  007_gtm_advisors.sql  008_tool_call_log.sql  009_users_byok_key.sql
scripts/: e2e_telegram.py  run_migrations.py
tests/: test_auth.py  test_byok.py  test_deep_research.py  test_ledger_concurrency.py  test_memory_extractor.py  test_page_fetch.py  test_recent_funding.py  test_skill_tool.py  test_skills_runner.py  test_telegram_tools.py  test_telemetry.py  test_version.py  test_web_search.py
(+45 files in other folders)
